force-app/main/default/objects/Last_TH_API_Call__c/Last_TH_API_Call__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains details of the most recent Trailhead API Call that processed an Incremental Sync.  This setting is not updated when a full sync (i.e. when a new contact that syncs is added or the sync setting is changed to TRUE)</description>
    <label>Last_TH_API_Call</label>
</CustomObject>