force-app/main/default/objects/Last_TH_API_Call__c/fields/CPU_Seconds_Used__c.field-meta.xml
<CustomField>
    <fullName>CPU_Seconds_Used__c</fullName>
    <description>Async calls are limited to 60 seconds
Syncronous calls are limited to 10 seconds</description>
    <label>CPU Seconds Used</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>