force-app/main/default/objects/Last_TH_API_Call__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <description>Date and Time of the end of last Call. Used to Calculate how long the update runs for</description>
    <label>End Date-Time</label>
    <type>DateTime</type>
</CustomField>