force-app/main/default/objects/Last_TH_API_Call__c/fields/Run_Time_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Run_Time_Seconds__c</fullName>
    <description>Number of seconds the last job ran for</description>
    <label>Run Time Seconds</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>