force-app/main/default/objects/Last_TH_API_Call__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <description>Date and Time of the start of last Call. Used to limit the records returned in the http request</description>
    <label>Start Date-Time</label>
    <type>DateTime</type>
</CustomField>