force-app/main/default/objects/Last_TH_API_Call__c/fields/Sync_SInce_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Sync_SInce_Date_Time__c</fullName>
    <label>Sync SInce Date Time (GMT)</label>
    <type>DateTime</type>
</CustomField>