force-app/main/default/objects/Last_TH_API_Call__c/fields/Users_returned__c.field-meta.xml
<CustomField>
    <fullName>Users_returned__c</fullName>
    <label>Users returned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>